--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,5 +9,8 @@
 @import 'components/workplace';
 @import 'components/certifications';
 @import 'components/aboutus';
-@import 'components/contact'
+@import 'components/contact';
+@import 'components/review';
+@import 'components/carosal';
+@import 'components/footer';
 
